--- a/SftpService/Internship.SftpService.Service/Internship.SftpService.Service.csproj
+++ b/SftpService/Internship.SftpService.Service/Internship.SftpService.Service.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0"/>
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+        <PackageReference Include="SSH.NET" Version="2020.0.1" />
     </ItemGroup>
 </Project>
