--- a/SftpService/Internship.SftpService.Service/Internship.SftpService.Service.csproj
+++ b/SftpService/Internship.SftpService.Service/Internship.SftpService.Service.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+        <PackageReference Include="Quartz" Version="3.2.4" />
         <PackageReference Include="SSH.NET" Version="2020.0.1" />
     </ItemGroup>
 
