--- a/SftpService/Internship.SftpService.Service/appsettings.Development.json
+++ b/SftpService/Internship.SftpService.Service/appsettings.Development.json
@@ -5,5 +5,22 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "JobConfig": {
+    "DownloadJob": {
+      "JobKey": "DownloadFilesJob",
+      "WithIdentity": "DownloadFilesJob-trigger",
+      "StartAt": "DateTimeOffset.Now",
+      "CronSchedule": "0/15 * * * * ?"
+    },
+    "UploadJob": {
+      "JobKey": "UploadFilesJob",
+      "WithIdentity": "UploadFilesJob-trigger",
+      "StartAt": "DateTimeOffset.Now",
+      "CronSchedule": "0/15 * * * * ?"
+    }
+  },
+  "PathConfig": {
+    
   }
 }
