move path to config

--- a/SftpService/Internship.SftpService.Service/appsettings.Development.json
+++ b/SftpService/Internship.SftpService.Service/appsettings.Development.json
@@ -21,6 +21,15 @@
     }
   },
   "PathConfig": {
-    
+    "DownloadFiles": {
+      "To": "./downloads/",
+      "From": "upload/out/",
+      "RemoveAfter": true
+    },
+    "UploadFiles": {
+      "To": "upload/in/",
+      "From": "./downloads/",
+      "RemoveAfter": false
+    }
   }
 }
