add rabbitmq using masstransit

--- a/SftpService/Internship.SftpService.Service/appsettings.Development.json
+++ b/SftpService/Internship.SftpService.Service/appsettings.Development.json
@@ -6,6 +6,21 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "BusConfig": {
+    "Host": "amqp://rabbitmquser:DEBmbwkSrzy9D1T9cJfa@localhost:5672",
+    "VirtualHost": "/",
+    "Username": "rabbitmquser",
+    "Password": "DEBmbwkSrzy9D1T9cJfa",
+    "SSLActive": false,
+    "SSLThumbprint": "a7a75205438e0b3697be97adc6ebbea715bf16b4"
+  },
+  "SftpConfig": {
+    "Host": "localhost",
+    "VirtualHost": "/",
+    "Port": 2222,
+    "Username": "foo",
+    "Password": "pass"
+  },
   "JobConfig": {
     "DownloadJob": {
       "JobKey": "DownloadFilesJob",
