--- a/SftpService/Internship.SftpService.Service/Internship.SftpService.Service.csproj
+++ b/SftpService/Internship.SftpService.Service/Internship.SftpService.Service.csproj
@@ -6,6 +6,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="MassTransit" Version="7.2.0-develop.3299" />
+        <PackageReference Include="MassTransit.RabbitMQ" Version="7.2.0-develop.3299" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
         <PackageReference Include="Quartz" Version="3.2.4" />
         <PackageReference Include="Quartz.Extensions.Hosting" Version="3.2.4" />
