--- a/Internship.FileService.Service/Internship.FileService.Service.csproj
+++ b/Internship.FileService.Service/Internship.FileService.Service.csproj
@@ -6,6 +6,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0"/>
+        <PackageReference Include="MassTransit" Version="7.2.0-develop.3299" />
+        <PackageReference Include="MassTransit.AspNetCore" Version="7.2.0-develop.3299" />
+        <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.2.0-develop.3299" />
+        <PackageReference Include="MassTransit.RabbitMQ" Version="7.2.0-develop.3299" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\SftpService\Internship.SftpService.Service\Internship.SftpService.Service.csproj" />
     </ItemGroup>
 </Project>
