--- a/Internship.FileService.Service/appsettings.Development.json
+++ b/Internship.FileService.Service/appsettings.Development.json
@@ -5,5 +5,13 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "BusConfig": {
+    "Host": "amqp://rabbitmquser:DEBmbwkSrzy9D1T9cJfa@localhost:5672",
+    "VirtualHost": "/",
+    "Username": "rabbitmquser",
+    "Password": "DEBmbwkSrzy9D1T9cJfa",
+    "SSLActive": false,
+    "SSLThumbprint": "a7a75205438e0b3697be97adc6ebbea715bf16b4"
   }
 }
