--- a/Internship.FileService.Service/appsettings.Development.json
+++ b/Internship.FileService.Service/appsettings.Development.json
@@ -13,5 +13,8 @@
     "Password": "DEBmbwkSrzy9D1T9cJfa",
     "SSLActive": false,
     "SSLThumbprint": "a7a75205438e0b3697be97adc6ebbea715bf16b4"
+  },
+  "ConnectionStrings": {
+    "MSSQLSERVERConnection": "Server=localhost;Database=InternshipDB;Trusted_Connection=True;"
   }
 }
