--- a/SftpService/Internship.SftpService.Service/appsettings.Development.json
+++ b/SftpService/Internship.SftpService.Service/appsettings.Development.json
@@ -39,7 +39,7 @@
     "DownloadFiles": {
       "To": "./downloads/",
       "From": "upload/out/",
-      "RemoveAfter": false
+      "RemoveAfter": true
     },
     "UploadFiles": {
       "To": "upload/in/",
