--- a/SftpService/Internship.SftpService.Service/Internship.SftpService.Service.csproj
+++ b/SftpService/Internship.SftpService.Service/Internship.SftpService.Service.csproj
@@ -19,4 +19,8 @@
     <ItemGroup>
       <Folder Include="downloads" />
     </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Internship.SftpService.Domain\Internship.SftpService.Domain.csproj" />
+    </ItemGroup>
 </Project>
