fix connection string

--- a/Internship.FileService.Service/appsettings.Development.json
+++ b/Internship.FileService.Service/appsettings.Development.json
@@ -15,6 +15,7 @@
     "SSLThumbprint": "a7a75205438e0b3697be97adc6ebbea715bf16b4"
   },
   "ConnectionStrings": {
-    "MSSQLSERVERConnection": "Server=localhost;Database=InternshipDB;Trusted_Connection=True;"
+    "MSSQLSERVERConnection": "Server=localhost;Database=InternshipDB;Trusted_Connection=True;",
+    "MYSQLConnection": "Server=127.0.0.1;Database=InternshipDB;Uid=ruslan;Pwd=Cyb3rt3ch;"
   }
 }
