--- a/Internship.FileService.Service/Internship.FileService.Service.csproj
+++ b/Internship.FileService.Service/Internship.FileService.Service.csproj
@@ -11,6 +11,8 @@
         <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.2.0-develop.3299" />
         <PackageReference Include="MassTransit.RabbitMQ" Version="7.2.0-develop.3299" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+        <PackageReference Include="MySql.Data" Version="8.0.23" />
+        <PackageReference Include="MySqlConnector" Version="1.3.0-beta.4" />
         <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
     </ItemGroup>
 
