--- a/SftpService/Internship.SftpService.Service/Internship.SftpService.Service.csproj
+++ b/SftpService/Internship.SftpService.Service/Internship.SftpService.Service.csproj
@@ -21,6 +21,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\Internship.FileService.Domain\Internship.FileService.Domain.csproj" />
       <ProjectReference Include="..\Internship.SftpService.Domain\Internship.SftpService.Domain.csproj" />
     </ItemGroup>
 </Project>
