fix model, fix db scheme

--- a/Internship.FileService.Service/appsettings.Development.json
+++ b/Internship.FileService.Service/appsettings.Development.json
@@ -16,6 +16,6 @@
   },
   "ConnectionStrings": {
     "MSSQLSERVERConnection": "Server=localhost;Database=InternshipDB;Trusted_Connection=True;",
-    "MYSQLConnection": "Server=localhost;Database=db;User ID=root;Password=Cyb3rt3ch;"
+    "MYSQLConnection": "Server=localhost;Database=fileservice_db;User ID=root;Password=Cyb3rt3ch;"
   }
 }
