--- a/Internship.TransactionService.API/Internship.TransactionService.API.csproj
+++ b/Internship.TransactionService.API/Internship.TransactionService.API.csproj
@@ -8,4 +8,8 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Internship.TransactionService.Infrastructure\Internship.TransactionService.Infrastructure.csproj" />
+    </ItemGroup>
+
 </Project>
