--- a/Internship.TransactionService.API/appsettings.Development.json
+++ b/Internship.TransactionService.API/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=transactionservice_db;User ID=root;Password=Cyb3rt3ch;"
   }
 }
