--- a/Internship.TransactionService.Infrastructure/Internship.TransactionService.Infrastructure.csproj
+++ b/Internship.TransactionService.Infrastructure/Internship.TransactionService.Infrastructure.csproj
@@ -4,4 +4,16 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Dapper" Version="2.0.78" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0-preview.1.21102.12" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0-preview.1.21102.12" />
+      <PackageReference Include="MySql.Data" Version="8.0.23" />
+      <PackageReference Include="MySqlConnector" Version="1.3.0-beta.4" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Internship.TransactionService.Application\Internship.TransactionService.Application.csproj" />
+    </ItemGroup>
+
 </Project>
