Remove moq payment project from file service

--- a/Internship.TransactionService.API/appsettings.Development.json
+++ b/Internship.TransactionService.API/appsettings.Development.json
@@ -6,6 +6,14 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "BusConfig": {
+    "Host": "amqp://rabbitmquser:DEBmbwkSrzy9D1T9cJfa@localhost:5672",
+    "VirtualHost": "/",
+    "Username": "rabbitmquser",
+    "Password": "DEBmbwkSrzy9D1T9cJfa",
+    "SSLActive": false,
+    "SSLThumbprint": "a7a75205438e0b3697be97adc6ebbea715bf16b4"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=transactionservice_db;User ID=root;Password=Cyb3rt3ch;"
   }
