--- a/Internship.TransactionService.API/Internship.TransactionService.API.csproj
+++ b/Internship.TransactionService.API/Internship.TransactionService.API.csproj
@@ -7,6 +7,9 @@
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="10.1.1" />
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+        <PackageReference Include="MassTransit.AspNetCore" Version="7.2.0-develop.3323" />
+        <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.2.0-develop.3323" />
+        <PackageReference Include="MassTransit.RabbitMQ" Version="7.2.0-develop.3323" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     </ItemGroup>
 
