--- a/Server/Internship.TransactionService.Service/Internship.TransactionService.Service.csproj
+++ b/Server/Internship.TransactionService.Service/Internship.TransactionService.Service.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
+        <RootNamespace>Internship.TransactionService.API</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -15,6 +16,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Internship.FileService.Domain\Internship.FileService.Domain.csproj" />
+      <ProjectReference Include="..\Internship.Shared\Internship.Shared.csproj" />
       <ProjectReference Include="..\Internship.TransactionService.Infrastructure\Internship.TransactionService.Infrastructure.csproj" />
     </ItemGroup>
 
