add config file (removed)

--- a/Client/angular.json
+++ b/Client/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "6cc8f983-11c6-46d1-bdbb-6d6cc683fe70"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
@@ -28,7 +31,8 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/app.config.json"
             ],
             "styles": [
               "src/styles.scss"
