--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,40 @@
-Server/Internship.sln
-Server/Internship.sln.DotSettings
-Server/.idea/.idea.Internship/.idea/.gitignore
-Server/.idea/.idea.Internship/.idea/.name
-Server/.idea/.idea.Internship/.idea/encodings.xml
-Server/.idea/.idea.Internship/.idea/indexLayout.xml
-Server/.idea/.idea.Internship/.idea/sqldialects.xml
-Server/.idea/.idea.Internship/.idea/vcs.xml
-Server/.idea/.idea.Internship/.idea/codeStyles/codeStyleConfig.xml
-Server/Internship.FileService.Domain/Internship.FileService.Domain.csproj
-Server/Internship.FileService.Infrastructure/Internship.FileService.Infrastructure.csproj
-Server/Internship.FileService.Service/appsettings.Development.json
-Server/Internship.FileService.Service/appsettings.json
-Server/Internship.FileService.Service/Internship.FileService.Service.csproj
-Server/Internship.FileService.Service.Tests/Internship.FileService.Service.Tests.csproj
-Server/Internship.FileService.Service/Properties/launchSettings.json
-Server/Internship.Shared/Internship.Shared.csproj
-Server/Internship.TransactionService.Domain/Internship.TransactionService.Domain.csproj
-Server/Internship.TransactionService.Infrastructure/Internship.TransactionService.Infrastructure.csproj
-Server/Internship.TransactionService.Service/appsettings.Development.json
-Server/Internship.TransactionService.Service/appsettings.json
-Server/Internship.TransactionService.Service/Internship.TransactionService.Service.csproj
-Server/Internship.TransactionService.Service/Properties/launchSettings.json
-Server/SftpService/appsettings.Development.json
-Server/SftpService/appsettings.json
-Server/SftpService/SftpService.csproj
-Server/SftpService/Internship.SftpService.Domain/Internship.SftpService.Domain.csproj
-Server/SftpService/Internship.SftpService.Infrastructure/Internship.SftpService.Infrastructure.csproj
-Server/SftpService/Internship.SftpService.Service/appsettings.Development.json
-Server/SftpService/Internship.SftpService.Service/appsettings.json
-Server/SftpService/Internship.SftpService.Service/Internship.SftpService.Service.csproj
-Server/SftpService/Internship.SftpService.Service.Tests/Internship.SftpService.Service.Tests.csproj
-Server/SftpService/Internship.SftpService.Service/Properties/launchSettings.json
-Server/SftpService/Properties/launchSettings.json
+bin/
+obj/
+/packages/
+riderModule.iml
+/_ReSharper.Caches/
+
+# Common IntelliJ Platform excludes
+
+# User specific
+**/.idea/**/workspace.xml
+**/.idea/**/tasks.xml
+**/.idea/shelf/*
+**/.idea/dictionaries
+**/.idea/httpRequests/
+
+# Sensitive or high-churn files
+**/.idea/**/dataSources/
+**/.idea/**/dataSources.ids
+**/.idea/**/dataSources.xml
+**/.idea/**/dataSources.local.xml
+**/.idea/**/sqlDataSources.xml
+**/.idea/**/dynamic.xml
+
+# Rider
+# Rider auto-generates .iml files, and contentModel.xml
+**/.idea/**/*.iml
+**/.idea/**/contentModel.xml
+**/.idea/**/modules.xml
+
+*.suo
+*.user
+.vs/
+[Bb]in/
+[Oo]bj/
+_UpgradeReport_Files/
+[Pp]ackages/
+
+Thumbs.db
+Desktop.ini
+.DS_Store
