--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,10 @@ _UpgradeReport_Files/
 Thumbs.db
 Desktop.ini
 .DS_Store
+Server/.idea/.idea.Internship/.idea/.gitignore
+Server/.idea/.idea.Internship/.idea/.name
+Server/.idea/.idea.Internship/.idea/encodings.xml
+Server/.idea/.idea.Internship/.idea/indexLayout.xml
+Server/.idea/.idea.Internship/.idea/sqldialects.xml
+Server/.idea/.idea.Internship/.idea/vcs.xml
+Server/.idea/.idea.Internship/.idea/codeStyles/codeStyleConfig.xml
