--- a/Server/Internship.FileService.Service/Internship.FileService.Service.csproj
+++ b/Server/Internship.FileService.Service/Internship.FileService.Service.csproj
@@ -11,6 +11,11 @@
         <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.2.0-develop.3299" />
         <PackageReference Include="MassTransit.RabbitMQ" Version="7.2.0-develop.3299" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+        <PackageReference Include="Serilog.Enrichers.Environment" Version="2.1.3" />
+        <PackageReference Include="Serilog.Enrichers.Process" Version="2.0.1" />
+        <PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0" />
+        <PackageReference Include="Serilog.Extensions.Hosting" Version="4.1.2" />
+        <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
     </ItemGroup>
 
     <ItemGroup>
