--- a/Server/Internship.TransactionService.Service/Internship.TransactionService.Service.csproj
+++ b/Server/Internship.TransactionService.Service/Internship.TransactionService.Service.csproj
@@ -11,6 +11,11 @@
         <PackageReference Include="MassTransit.AspNetCore" Version="7.2.0-develop.3323" />
         <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.2.0-develop.3323" />
         <PackageReference Include="MassTransit.RabbitMQ" Version="7.2.0-develop.3323" />
+        <PackageReference Include="Serilog.AspNetCore" Version="4.0.0" />
+        <PackageReference Include="Serilog.Enrichers.Environment" Version="2.1.3" />
+        <PackageReference Include="Serilog.Enrichers.Process" Version="2.0.1" />
+        <PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0" />
+        <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     </ItemGroup>
 
