--- a/Server/Internship.TransactionService.Service/appsettings.Development.json
+++ b/Server/Internship.TransactionService.Service/appsettings.Development.json
@@ -1,11 +1,4 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
   "BusConfig": {
     "Host": "amqp://rabbitmquser:DEBmbwkSrzy9D1T9cJfa@localhost:5672",
     "VirtualHost": "/",
@@ -16,5 +9,30 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=transactionservice_db;User ID=root;Password=Cyb3rt3ch;"
+  },
+  "Serilog": {
+    "Using": [],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithProcessId", "WithThreadId" ],
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "RollingFile",
+        "Args": {
+          "pathFormat": "C:\\banking_LOGS\\TransactionService\\TransactionService_{Date}.txt",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] [{SourceContext}] [{EventId}] {Message}{NewLine}{Exception}",
+          "fileSizeLimitBytes": 2147483648,
+          "retainedFileCountLimit": 5
+        }
+      }
+    ]
   }
 }
