--- a/Server/SftpService/Internship.SftpService.Service/Internship.SftpService.Service.csproj
+++ b/Server/SftpService/Internship.SftpService.Service/Internship.SftpService.Service.csproj
@@ -13,6 +13,11 @@
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
         <PackageReference Include="Quartz" Version="3.2.4" />
         <PackageReference Include="Quartz.Extensions.Hosting" Version="3.2.4" />
+        <PackageReference Include="Serilog.Enrichers.Environment" Version="2.1.3" />
+        <PackageReference Include="Serilog.Enrichers.Process" Version="2.0.1" />
+        <PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0" />
+        <PackageReference Include="Serilog.Extensions.Hosting" Version="4.1.2" />
+        <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
         <PackageReference Include="SSH.NET" Version="2020.0.1" />
     </ItemGroup>
 
