--- a/Server/Internship.FileService.Service/Internship.FileService.Service.csproj
+++ b/Server/Internship.FileService.Service/Internship.FileService.Service.csproj
@@ -16,6 +16,8 @@
         <PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0" />
         <PackageReference Include="Serilog.Extensions.Hosting" Version="4.1.2" />
         <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
+        <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
+        <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
     </ItemGroup>
 
     <ItemGroup>
