--- a/Server/Internship.TransactionService.Service/Internship.TransactionService.Service.csproj
+++ b/Server/Internship.TransactionService.Service/Internship.TransactionService.Service.csproj
@@ -16,11 +16,14 @@
         <PackageReference Include="Serilog.Enrichers.Process" Version="2.0.1" />
         <PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0" />
         <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
+        <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
+        <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Internship.Shared\Internship.Shared.csproj" />
+      <ProjectReference Include="..\Internship.TransactionService.Domain\Internship.TransactionService.Domain.csproj" />
       <ProjectReference Include="..\Internship.TransactionService.Infrastructure\Internship.TransactionService.Infrastructure.csproj" />
     </ItemGroup>
 
