fix path, change it from absolute to relative one

--- a/Server/Internship.TransactionService.Service/appsettings.json
+++ b/Server/Internship.TransactionService.Service/appsettings.json
@@ -17,7 +17,7 @@
       {
         "Name": "RollingFile",
         "Args": {
-          "pathFormat": "C:\\banking_LOGS\\TransactionService\\TransactionService_{Date}.txt",
+          "pathFormat": "./banking_LOGS/TransactionService/TransactionService_{Date}.txt",
           "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] [{SourceContext}] {Message}{NewLine}{Exception}"
         }
       }
