--- a/Server/SftpService/Internship.SftpService.Service/appsettings.json
+++ b/Server/SftpService/Internship.SftpService.Service/appsettings.json
@@ -16,7 +16,7 @@
       {
         "Name": "RollingFile",
         "Args": {
-          "pathFormat": "C:\\banking_LOGS\\SftpService\\SftpService_{Date}.txt",
+          "pathFormat": "./banking_LOGS/SftpService/SftpService_{Date}.txt",
           "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] [{SourceContext}] {Message}{NewLine}{Exception}"
         }
       }
