--- a/Server/Internship.TransactionService.Infrastructure/Internship.TransactionService.Infrastructure.csproj
+++ b/Server/Internship.TransactionService.Infrastructure/Internship.TransactionService.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
@@ -13,7 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Internship.TransactionService.Application\Internship.TransactionService.Application.csproj" />
+      <ProjectReference Include="..\Internship.TransactionService.Domain\Internship.TransactionService.Domain.csproj" />
     </ItemGroup>
 
 </Project>
