--- a/Server/SftpService/Internship.SftpService.Service/Internship.SftpService.Service.csproj
+++ b/Server/SftpService/Internship.SftpService.Service/Internship.SftpService.Service.csproj
@@ -25,6 +25,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\Internship.FileService.Domain\Internship.FileService.Domain.csproj" />
+      <ProjectReference Include="..\..\Internship.Shared\Internship.Shared.csproj" />
       <ProjectReference Include="..\Internship.SftpService.Domain\Internship.SftpService.Domain.csproj" />
     </ItemGroup>
 </Project>
