--- a/Server/Internship.AccountService.Infrastructure/Internship.AccountService.Infrastructure.csproj
+++ b/Server/Internship.AccountService.Infrastructure/Internship.AccountService.Infrastructure.csproj
@@ -4,4 +4,16 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.78" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
+    <PackageReference Include="MySql.Data" Version="8.0.23" />
+    <PackageReference Include="MySqlConnector" Version="1.3.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Internship.AccountService.Domain\Internship.AccountService.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
