--- a/Server/Internship.AccountService.Service/appsettings.Development.json
+++ b/Server/Internship.AccountService.Service/appsettings.Development.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+  "BusConfig": {
+    "Host": "amqp://rabbitmquser:DEBmbwkSrzy9D1T9cJfa@localhost:5672",
+    "VirtualHost": "/",
+    "Username": "rabbitmquser",
+    "Password": "DEBmbwkSrzy9D1T9cJfa",
+    "SSLActive": false,
+    "SSLThumbprint": "a7a75205438e0b3697be97adc6ebbea715bf16b4"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=accountservice_db;User ID=root;Password=Cyb3rt3ch;"
   }
 }
