--- a/Server/Internship.AccountService.Service/Properties/launchSettings.json
+++ b/Server/Internship.AccountService.Service/Properties/launchSettings.json
@@ -2,6 +2,7 @@
   "profiles": {
     "Internship.AccountService.Service": {
       "commandName": "Project",
+      "dotnetRunMessages": "true",
       "environmentVariables": {
         "DOTNET_ENVIRONMENT": "Development"
       }
