--- a/Server/Internship.FileService.Service/Internship.FileService.Service.csproj
+++ b/Server/Internship.FileService.Service/Internship.FileService.Service.csproj
@@ -18,6 +18,7 @@
         <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
         <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
         <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
+        <PackageReference Include="ServiceStack.Text" Version="5.10.4" />
     </ItemGroup>
 
     <ItemGroup>
