--- a/Server/Internship.FileService.Infrastructure/Internship.FileService.Infrastructure.csproj
+++ b/Server/Internship.FileService.Infrastructure/Internship.FileService.Infrastructure.csproj
@@ -14,6 +14,7 @@
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0-preview.1.21102.12" />
       <PackageReference Include="MySql.Data" Version="8.0.23" />
       <PackageReference Include="MySqlConnector" Version="1.3.0" />
+      <PackageReference Include="ServiceStack.Text" Version="5.10.4" />
     </ItemGroup>
 
 </Project>
