--- a/Server/Internship.FileService.Service.Tests/Internship.FileService.Infrastructure.Tests.csproj
+++ b/Server/Internship.FileService.Service.Tests/Internship.FileService.Infrastructure.Tests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
@@ -17,6 +17,11 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Internship.FileService.Domain\Internship.FileService.Domain.csproj" />
+      <ProjectReference Include="..\Internship.FileService.Infrastructure\Internship.FileService.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
