--- a/Server/Internship.AccountService.Service/appsettings.Development.json
+++ b/Server/Internship.AccountService.Service/appsettings.Development.json
@@ -9,5 +9,16 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=accountservice_db;User ID=root;Password=Cyb3rt3ch;"
+  },
+  "JobConfig": {
+    "GenerateReportJob": {
+      "JobKey": "GenerateReportJob",
+      "WithIdentity": "GenerateReportJob-trigger",
+      "StartAt": "DateTimeOffset.Now",
+      "CronSchedule": "0 0 * * *"
+    }
+  },
+  "ReportConfig": {
+    "AccountsPerFile": 2
   }
 }
