--- a/Server/Internship.AccountService.Service/appsettings.Development.json
+++ b/Server/Internship.AccountService.Service/appsettings.Development.json
@@ -15,7 +15,8 @@
       "JobKey": "GenerateReportJob",
       "WithIdentity": "GenerateReportJob-trigger",
       "StartAt": "DateTimeOffset.Now",
-      "CronSchedule": "0 0 * * *"
+      "CronSchedule": "0 0 * * *",
+      "TestCron": "0/20 * * * * ?"
     }
   },
   "ReportConfig": {
