Generate End-Of-Day report

--- a/Server/SftpService/Internship.SftpService.Service/Internship.SftpService.Service.csproj
+++ b/Server/SftpService/Internship.SftpService.Service/Internship.SftpService.Service.csproj
@@ -27,5 +27,6 @@
       <ProjectReference Include="..\..\Internship.FileService.Domain\Internship.FileService.Domain.csproj" />
       <ProjectReference Include="..\..\Internship.Shared\Internship.Shared.csproj" />
       <ProjectReference Include="..\Internship.SftpService.Domain\Internship.SftpService.Domain.csproj" />
+      <ProjectReference Include="..\Internship.SftpService.Infrastructure\Internship.SftpService.Infrastructure.csproj" />
     </ItemGroup>
 </Project>
