Fix multithreading sftp connections using threading synchronization

--- a/Server/Internship.AccountService.Service/appsettings.Development.json
+++ b/Server/Internship.AccountService.Service/appsettings.Development.json
@@ -15,7 +15,7 @@
       "JobKey": "GenerateReportJob",
       "WithIdentity": "GenerateReportJob-trigger",
       "StartAt": "DateTimeOffset.Now",
-      "CronSchedule": "59 23 * * *",
+      "CronSchedule": "59 23 * * * ?",
       "TestCron": "0/20 * * * * ?"
     }
   },
