--- a/Server/SftpService/Internship.SftpService.Service/appsettings.Development.json
+++ b/Server/SftpService/Internship.SftpService.Service/appsettings.Development.json
@@ -26,13 +26,13 @@
       "JobKey": "DownloadFilesJob",
       "WithIdentity": "DownloadFilesJob-trigger",
       "StartAt": "DateTimeOffset.Now",
-      "CronSchedule": "0/20 * * * * ?"
+      "CronSchedule": "* * * * * ?"
     },
     "UploadJob": {
       "JobKey": "UploadFilesJob",
       "WithIdentity": "UploadFilesJob-trigger",
       "StartAt": "DateTimeOffset.Now",
-      "CronSchedule": "0/20 * * * * ?"
+      "CronSchedule": "* * * * * ?"
     }
   },
   "PathConfig": {
