--- a/Server/Internship.AccountService.Service/appsettings.Development.json
+++ b/Server/Internship.AccountService.Service/appsettings.Development.json
@@ -16,7 +16,7 @@
       "WithIdentity": "GenerateReportJob-trigger",
       "StartAt": "DateTimeOffset.Now",
       "CronSchedule": "59 23 * * * ?",
-      "TestCron": "0/20 * * * * ?"
+      "TestCron": "*/5 * * * * ?"
     }
   },
   "ReportConfig": {
